--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <!-- This is navigation bar-->    
     <nav id="navbar">
       <div class="nav-logo">
-        <img src="Images/Logo.png">
+        <img src="images/Logo.png">
         
       </div>
       <div class="nav-links">
@@ -23,7 +23,7 @@
       <div class="button-section">
         <button class="login">Login</button>
         <button class="get-started">Get started</button>
-        <img src="Images/Frame.png" >
+        <img src="images/Frame.png" >
       </div>
       </nav>
 
@@ -76,12 +76,12 @@
       <div id="logo-text-section">
         <h2>Buy/Sell the favorites with <em>No Fees*</em></h2>
           <div class="logo">
-            <img src="Images/Ethereum (ETH).png">
-        <img src="Images/Tether (USDT).png">
-        <img src="Images/Cardano (ADA).png">
-        <img src="Images/Binance Coin (BNB).png">
-        <img src="Images/Polygon (MATIC).png">
-        <img src="Images/Chainlink (LINK).png">
+            <img src="images/Ethereum (ETH).png">
+        <img src="images/Tether (USDT).png">
+        <img src="images/Cardano (ADA).png">
+        <img src="images/Binance Coin (BNB).png">
+        <img src="images/Polygon (MATIC).png">
+        <img src="images/Chainlink (LINK).png">
           </div>
         </div>
 
@@ -93,7 +93,7 @@
   <section class="features">
  <div>
 
-   <img src="Images/SecureEscrow.png">
+   <img src="images/SecureEscrow.png">
 
    <h3>Secured by Escrow
     <hr class="hr-1">
@@ -104,7 +104,7 @@
  </div>
  <div>
 
-    <img src="Images/NewbieFriendly.png">
+    <img src="images/NewbieFriendly.png">
 
     <h3>Newbie Friendly
       <hr class="hr-2">
@@ -208,7 +208,7 @@
 <footer>
   <div class="hyperlinks">
     <div class="spacio">
-      <img src="Images/spacio.png">
+      <img src="images/spacio.png">
     </div>
     <div class="links">
     <h2>
