--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Online Crypto Shop</title>
+    <link rel="shortcut icon" href="images/cryptocurrencies.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
