all problem solved

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
  </div>
  <div>
 
-   <img src="Images/MultiplePayments.png">
+   <img src="images/MultiplePayments.png">
    <h3>120+ Payment Method</h3>
    <p>There are many <br> options of <br> payment</p>
    <a href="#">Learn about our payment option</a>
